# jingoo

./: .gitignore  .travis.yml  AUTHORS  CHANGES  COPYING  INSTALL  LICENSE  Makefile  README  README.md  _headache.config  _header  ardivink.lua  jingoo.opam  opam
example/: .merlin  Makefile  advanced.ml  base.tmpl  bench.ml  cheatsheet.jingoo  cheatsheet.tmpl  dune.in  header.tmpl  index.html  jg_highlight.mll  macro.tmpl  my_ext.ml  partial.tmpl  simple.ml  test.ml  test_data.ml
example/samples/: and-or.expected  and-or.jingoo  and-or.models  autoescape.expected  autoescape.jingoo  call.expected  call.jingoo  fat-arrow.expected  fat-arrow.jingoo  filter.expected  filter.jingoo  filter_batch.expected  filter_batch.jingoo  filter_batch.models  filter_capitalize.expected  filter_capitalize.jingoo  filter_default.jingoo  filter_eval.expected  filter_eval.jingoo  filter_exists.jingoo  filter_flatten.expected  filter_flatten.jingoo  filter_groupby.expected  filter_groupby.jingoo  filter_groupby.models  filter_join.expected  filter_join.jingoo  (+64 more)
ocaml/: index.html
src/: META  Makefile  dune  jg_ast.ml  jg_ast_mapper.ml  jg_ast_optim.ml  jg_ast_optimize.ml  jg_cmdline.ml  jg_compile.ml  jg_interp.ml  jg_lexer.mll  jg_parser.mly  jg_runtime.ml  jg_stub.ml  jg_stub.mli  jg_template.ml  jg_template.mli  jg_template2.ml  jg_template2.mli  jg_types.ml  jg_types.mli  jg_utils.ml  jingoo_mt.ml
templates/: templates.css  templates.en.html  templates.fr.html
tests/: Makefile  dune.in  test.ml  test_dead_code_elimination.ml  test_output.ml  test_parser.ml  test_runtime.ml
(+28 files in other folders)
