opam-version: "2.0"
maintainer: "Masaki WATANABE <lambda.watanabe@gmail.com>"
authors: "Masaki WATANABE <lambda.watanabe@gmail.com>"
homepage: "https://github.com/tategakibunko/jingoo"
bug-reports: "https://github.com/tategakibunko/jingoo/issues"
dev-repo: "git+https://github.com/tategakibunko/jingoo.git"
license: "BSD-3"
synopsis: "Template engine almost compatible with Jinja2(python template engine)"
build: [make "all"]
install: [make "install"]
remove: [make "uninstall"]
depends: [
  "ocaml" {>= "4.04.0"}
  "dune" {build & >= "1.4.0"}
  "menhir"
  "ppx_deriving"
  "re"
  "uutf" {>= "0.9.4"}
  "uucp"
  "ounit" {with-test & >= "2.0.0"}
]
